--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-apexcharts": "^1.4.1",
     "vue3-perfect-scrollbar": "^1.6.0",
-    "vuetify": "3.0.0-beta.11",
+    "vuetify": "^3.3.20",
     "vuex": "^4.0.2",
     "webfontloader": "^1.6.28"
   },
